# Graphite

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Graphite  GraphiteInstaller  LICENSE  Math.h  Plot2D.h  Readme.md  SECURITY.md  ScriptInterface.h
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security.md
Examples/Circle/: Graphite.cpp
Examples/Curve Bezier/: Graphite.cpp
Examples/Lines/: Graphite.cpp
Examples/MultiLine/: Graphite.cpp
Examples/Parabol/: Graphite.cpp
Examples/Plots/: Graphite.cpp
Examples/Points/: Main.cpp  Point.h  Script.cpp  ScriptInterface.h
Examples/Sin/: Graphite.cpp
Graphite/: CMakeLists.txt  Globals.h  Graphite.cpp  Graphite.h  Main.cpp
Graphite/App/: Flags.h  Graphite.cpp  Graphite.h
Graphite/Core/AppRenderer/: AppRenderer.cpp  AppRenderer.h  AppRenderer.hpp
Graphite/Core/Math/: Math.h  Point.cpp  Point.h  PointShader.h
Graphite/Core/Plots/Plot2D/: Plot2D.cpp
Graphite/Core/Renderer/: Renderer.cpp  Renderer.h
Graphite/Core/ScriptController/: ScriptController.cpp  ScriptController.h
Graphite/InterfaceInclude/: Point.h  ScriptInterface.h
Graphite/Math/: Point.cpp  Point.h  PointShader.h
Graphite/Resources/: ScriptInterface.h
Graphite/Resources/Math/: Math.h  Point.cpp  Point.h  PointShader.h  Shader.h  iMath.h
Graphite/Resources/Math/Functions/Line/: Line.cpp  Line.h
Graphite/Resources/Math/Functions/MultiLine/: MultiLine.cpp  MultiLine.h
Graphite/Resources/Math/Functions/Point/: Point.cpp  Point.h
Graphite/Resources/Math/Plots/Plot2D/: Plot2D.cpp  Plot2D.h  PreShader.h  Shader.h
Graphite/Resources/Math/Plots/Plot3D/: Plot3D.cpp
Graphite/Resources/Math/Point/: Point.cpp  Point.h  PointShader.h
Graphite/Resources/Runtime/: Math.h  Plot2D.h  Point.h  ScriptInterface.h
Graphite/Resources/Templates/: Main.h
Graphite/ScriptController/: ScriptController.cpp  ScriptController.h
Graphite/Template/: GraphiteTemplate.h  MainTemplate.h  ScriptInterface.h
Installer/: CMakeLists.txt  main.cpp
